# tftpstats

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindByacc.cmake  FindFlex.cmake  clean-all.cmake  tftpstatsCompilerDefenses.cmake  tftpstatsUtils.cmake
src/: debug_utils.h  gdb.h  main.c  tftpstats_config.h.in
src/debug/: gdb.c
src/tftpc/: CMakeLists.txt  tftp_lib.c  tftp_resources.c  tftp_resources.h  tftpc_config.h.in  tftpc_driver.c  tftpc_main.c
src/tftps/: CMakeLists.txt  file.tst  tftp_lib.c  tftp_lib.h  tftp_resources.c  tftp_types.h  tftps_config.h.in  tftps_main.c  tftps_main.h
src/ttftpc/: CMakeLists.txt  ttftp_lib.c  ttftp_lib.h  ttftp_resources.c  ttftp_resources.h  ttftp_types.h  ttftpc_config.h.in  ttftpc_driver.c
src/ttftps/: CMakeLists.txt  ttftp_lib.c  ttftp_resources.c  ttftps_config.h.in  ttftps_main.c  ttftps_main.h
