cmake_minimum_required(VERSION 3.0)

set(TFTPSTATS_PROGRAM tftpstats)

project(${TFTPSTATS_PROGRAM} C)

set(CMAKE_C_STANDARD 11)


set(CMAKE_COLOR_MAKEFILE   ON)
set(CMAKE_FILES_DIRECTORY ${CMAKE_SOURCE_DIR}/cmake)
set(PROJ_SOURCE_DIR ${CMAKE_SOURCE_DIR})
set(PROJ_BINARY_DIR ${CMAKE_INSTALL_PREFIX}/bin)

option(ENABLE_CCACHE "Use ccache" ON)

include(ProcessorCount)
ProcessorCount(N)
if(NOT N EQUAL 0)
  set(CTEST_BUILD_FLAGS "-j ${N}") 
  set(ctest_test_args ${ctest_test_args} PARALLEL_LEVEL ${N})
endif()

if (NOT CMAKE_INSTALL_PREFIX)
  set(CMAKE_INSTALL_PREFIX ./)
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
endif()

include(ExternalProject)

set(TFTPC_PROGRAM ttftpc)

ExternalProject_Add(${TFTPC_PROGRAM}
    SOURCE_DIR   ${PROJ_SOURCE_DIR}/src/${TFTPC_PROGRAM}
    BINARY_DIR   ${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM}
    INSTALL_DIR  ${CMAKE_INSTALL_PREFIX}/bin
    TMP_DIR      ${PROJ_SOURCE_DIR}/tmp
    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_SOURCE_DIR=${PROJ_SOURCE_DIR}/src/${TFTPC_PROGRAM} -DCMAKE_BINARY_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM} -DDEPENDENCY_PROJECT=ON -DROOT_INCLUDE_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM}
    BUILD_COMMAND make -j ${N}
    INSTALL_COMMAND make install
    BUILD_IN_SOURCE 0
    BUILD_ALWAYS 1
    LOG_CONFIGURE 0
    LOG_INSTALL 0
    LOG_BUILD 0
    LOG_UPDATE 0
    LOG_TEST 0
)

set(TFTPS_PROGRAM ttftps)

ExternalProject_Add(${TFTPS_PROGRAM}
    SOURCE_DIR   ${PROJ_SOURCE_DIR}/src/${TFTPS_PROGRAM}
    BINARY_DIR   ${CMAKE_INSTALL_PREFIX}/bin/${TFTPS_PROGRAM}
    INSTALL_DIR  ${CMAKE_INSTALL_PREFIX}/bin
    TMP_DIR      ${PROJ_SOURCE_DIR}/tmp
    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_SOURCE_DIR=${PROJ_SOURCE_DIR}/src/${TFTPS_PROGRAM} -DCMAKE_BINARY_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPS_PROGRAM} -DDEPENDENCY_PROJECT=ON -DROOT_INCLUDE_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPS_PROGRAM}
    BUILD_COMMAND make -j ${N}
    INSTALL_COMMAND make install
    BUILD_IN_SOURCE 0
    BUILD_ALWAYS 1
    LOG_CONFIGURE 0
    LOG_INSTALL 0
    LOG_BUILD 0
    LOG_UPDATE 0
    LOG_TEST 0
)

set(CMAKE_C_COMPILER "gcc")

set(PROJECT_C_FILES src/main.c)

add_executable(${TFTPSTATS_PROGRAM} ${PROJECT_C_FILES})
add_dependencies(${TFTPSTATS_PROGRAM} ${TFTPC_PROGRAM})
add_dependencies(${TFTPSTATS_PROGRAM} ${TFTPS_PROGRAM})

set(TFTPC_PATH ${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM})

target_compile_options(${TFTPSTATS_PROGRAM} PUBLIC -Wall -Wextra -pedantic)
target_link_libraries(${TFTPSTATS_PROGRAM}
    ${TFTPC_PATH}/${CMAKE_STATIC_LIBRARY_PREFIX}${TFTPC_PROGRAM}${CMAKE_STATIC_LIBRARY_SUFFIX}
)

add_custom_target(clean-all
   COMMAND ${CMAKE_BUILD_TOOL} clean
   COMMAND ${CMAKE_COMMAND} -P ${CMAKE_FILES_DIRECTORY}/clean-all.cmake)

