cmake_minimum_required(VERSION 3.0)

set(TFTPSTATS_PROGRAM tftpstats)

project(${TFTPSTATS_PROGRAM} C)

set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY   ON)
set(CMAKE_COLOR_MAKEFILE   ON)

set(PROJ_SOURCE_DIR ${CMAKE_SOURCE_DIR})
set(CMAKE_FILES_DIR ${PROJ_SOURCE_DIR}/cmake)
set(PROJ_BINARY_DIR ${CMAKE_INSTALL_PREFIX}/bin)
set(PROJ_TMP_DIR    ${CMAKE_INSTALL_PREFIX}/tmp)

set(CMAKE_C_COMPILER "gcc")
set(CMAKE_C_STANDARD 11)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
include("${CMAKE_FILES_DIR}/${TFTPSTATS_PROGRAM}Utils.cmake")

find_package(Byacc REQUIRED)
find_package(Flex REQUIRED)

if(NOT DEFINED TFTPSTATS_GCC AND CMAKE_C_COMPILER_ID MATCHES "GNU")
  set(TFTPSTATS_GCC 1)
endif()

option(ENABLE_CCACHE "Use ccache" ON)
option(ENABLE_BUILD_HARDENING "Enable build hardening" OFF)

include(ProcessorCount)
ProcessorCount(N)
if(NOT N EQUAL 0)
  set(CTEST_BUILD_FLAGS "-j ${N}")
  set(ctest_test_args ${ctest_test_args} PARALLEL_LEVEL ${N})
endif()

if (NOT CMAKE_INSTALL_PREFIX)
  set(CMAKE_INSTALL_PREFIX ./)
endif()

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
endif()

include(ExternalProject)

set(LIB_PCAP pcap)

ExternalProject_Add(${LIB_PCAP}
    DOWNLOAD_COMMAND git clone https://github.com/the-tcpdump-group/libpcap.git ${LIB_PCAP}
    DOWNLOAD_DIR ${PROJ_SOURCE_DIR}/src/lib/
    SOURCE_DIR   ${PROJ_SOURCE_DIR}/src/lib/${LIB_PCAP}
    BINARY_DIR   ${PROJ_BINARY_DIR}/lib/${LIB_PCAP}
    INSTALL_DIR  ${PROJ_BINARY_DIR}/lib/${LIB_PCAP}
    TMP_DIR      ${PROJ_SOURCE_DIR}/tmp
    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${PROJ_BINARY_DIR}/lib/${LIB_PCAP} -DCMAKE_SOURCE_DIR=${PROJ_SOURCE_DIR}/src/lib/${LIB_PCAP}
    BUILD_COMMAND make -j ${N}
    INSTALL_COMMAND make install
    BUILD_IN_SOURCE 0
    BUILD_ALWAYS 1
    DOWNLOAD_NO_PROGRESS 1
    UPDATE_DISCONNECTED 0
    LOG_DOWNLOAD 0
    LOG_CONFIGURE 0
    LOG_INSTALL 0
    LOG_BUILD 0
    LOG_UPDATE 0
    LOG_TEST 0
    GIT_PROGRESS 0
)

set(TFTPC_PROGRAM tftpc)

ExternalProject_Add(${TFTPC_PROGRAM}
    SOURCE_DIR   ${PROJ_SOURCE_DIR}/src/${TFTPC_PROGRAM}
    BINARY_DIR   ${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM}
    INSTALL_DIR  ${CMAKE_INSTALL_PREFIX}/bin
    TMP_DIR      ${PROJ_SOURCE_DIR}/tmp
    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_SOURCE_DIR=${PROJ_SOURCE_DIR}/src/${TFTPC_PROGRAM} -DCMAKE_BINARY_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM} -DDEPENDENCY_PROJECT=ON -DROOT_INCLUDE_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPC_PROGRAM}
    BUILD_COMMAND make -j ${N}
    INSTALL_COMMAND make install
    BUILD_IN_SOURCE 0
    BUILD_ALWAYS 1
    LOG_CONFIGURE 0
    LOG_INSTALL 0
    LOG_BUILD 0
    LOG_UPDATE 0
    LOG_TEST 0
)

set(TFTPS_PROGRAM tftps)

ExternalProject_Add(${TFTPS_PROGRAM}
    SOURCE_DIR   ${PROJ_SOURCE_DIR}/src/${TFTPS_PROGRAM}
    BINARY_DIR   ${CMAKE_INSTALL_PREFIX}/bin/${TFTPS_PROGRAM}
    INSTALL_DIR  ${CMAKE_INSTALL_PREFIX}/bin
    TMP_DIR      ${PROJ_SOURCE_DIR}/tmp
    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_SOURCE_DIR=${PROJ_SOURCE_DIR}/src/${TFTPS_PROGRAM} -DCMAKE_BINARY_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPS_PROGRAM} -DDEPENDENCY_PROJECT=ON -DROOT_INCLUDE_DIR=${CMAKE_INSTALL_PREFIX}/bin/${TFTPS_PROGRAM}
    BUILD_COMMAND make -j ${N}
    INSTALL_COMMAND make install
    BUILD_IN_SOURCE 0
    BUILD_ALWAYS 1
    LOG_CONFIGURE 0
    LOG_INSTALL 0
    LOG_BUILD 0
    LOG_UPDATE 0
    LOG_TEST 0
)

configure_file(
        "${PROJ_SOURCE_DIR}/src/${TFTPSTATS_PROGRAM}_config.h.in"
        "${PROJ_BINARY_DIR}/${TFTPSTATS_PROGRAM}_config.h")

include_directories(${PROJ_BINARY_DIR})
include_directories(${PROJ_BINARY_DIR}/lib/${LIB_PCAP})
include_directories(${PROJ_BINARY_DIR}/lib/${LIB_PCAP}/include)

set(PROJECT_C_FILES src/main.c)

add_executable(${TFTPSTATS_PROGRAM} ${PROJECT_C_FILES})
add_dependencies(${TFTPSTATS_PROGRAM} ${LIB_PCAP})
add_dependencies(${TFTPSTATS_PROGRAM} ${TFTPC_PROGRAM})
add_dependencies(${TFTPSTATS_PROGRAM} ${TFTPS_PROGRAM})

if(ENABLE_BUILD_HARDENING)
    include("${CMAKE_FILES_DIR}/${TFTPSTATS_PROGRAM}CompilerDefenses.cmake")
endif()

target_compile_options(${TFTPSTATS_PROGRAM} PUBLIC -Wall -Wextra -pedantic)
target_link_libraries(${TFTPSTATS_PROGRAM} ${CMAKE_INSTALL_PREFIX}/bin/lib/${LIB_PCAP}/${CMAKE_STATIC_LIBRARY_PREFIX}${LIB_PCAP}${CMAKE_STATIC_LIBRARY_SUFFIX})

add_custom_target(clean-all
   COMMAND ${CMAKE_BUILD_TOOL} clean
   COMMAND ${CMAKE_COMMAND} -P ${CMAKE_FILES_DIR}/clean-all.cmake)

